# romea-ros1-path-following

./: CMakeLists.txt  nodelet.xml  package.xml
include/romea_path_following/: path_following.hpp  path_following_factory.hpp  path_following_lateral_control.hpp  path_following_longitudinal_control.hpp  path_following_nodelet.hpp  path_following_parameters.hpp  path_following_sliding_observer.hpp  path_following_traits.hpp
src/: path_following.cpp  path_following_node.cpp  path_following_nodelet.cpp
