<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>romea_path_following</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cyrille.pierre@inrae.fr">Cyrille Pierre</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>

  <depend>romea_common_utils</depend>
  <depend>romea_mobile_base_utils</depend>
  <depend>romea_mobile_base_msgs</depend>
  <depend>romea_joy</depend>
  <depend>romea_path_utils</depend>
  <depend>romea_path_msgs</depend>

  <depend>romea_core_common</depend>
  <depend>romea_core_mobile_base</depend>
  <depend>romea_core_control</depend>
  <depend>romea_core_path</depend>
  <depend>romea_core_path_following</depend>
  <depend>romea_core_odo</depend>
  <!-- <depend>romea_following_utils</depend> -->

</package>
